[package]
name = "disksift"
version = "0.1.0"
edition = "2024"
description = "A modern CLI tool to analyze disk usage and find largest files/directories"
license = "MIT"
repository = "https://github.com/RUNFUNRUN/disksift"
keywords = ["disk", "usage", "cli", "analysis", "space"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
humansize = "2.1.3"
indicatif = "0.18.3"
walkdir = "2.5.0"
